--- a/algolia-ionic/src/app/search/search.page.html
+++ b/algolia-ionic/src/app/search/search.page.html
@@ -2,21 +2,17 @@
   <ion-toolbar>
     <ion-title>search</ion-title>
   </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar (ionChange)="onSearchTermChange($event)"></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <ais-instantsearch [config]="config">
-    <ais-search-box></ais-search-box>
-    <ais-hits>
-      <ng-template let-hits="hits">
-        <ol class="ais-Hits-list">
-          <li *ngFor="let hit of hits" class="ais-Hits-item">
-            {{hit.name}}
-          </li>
-        </ol>
-      </ng-template>
-    </ais-hits>
-  </ais-instantsearch>
+  <ion-list>
+    <ion-item *ngFor="let result of results"
+              routerLink="/view/{{result.objectID}}"
+    >{{result.name}}</ion-item>
+  </ion-list>
 
 </ion-content>
