--- a/algolia-ionic/src/app/search/search.page.html
+++ b/algolia-ionic/src/app/search/search.page.html
@@ -1,18 +1,22 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>search</ion-title>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar (ionChange)="onSearchTermChange($event)"></ion-searchbar>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>search</ion-title>
+    </ion-toolbar>
+    <ion-toolbar [formGroup]="searchForm">
+        <ion-searchbar slot="start" formControlName="searchTerm"></ion-searchbar>
+        <ion-buttons slot="end">
+            <ion-checkbox formControlName="aroundLatLngViaIP"></ion-checkbox>
+            <ion-label [mode]="">Search nearby</ion-label>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <ion-list>
-    <ion-item *ngFor="let result of results"
-              routerLink="/view/{{result.objectID}}"
-    >{{result.name}}</ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item *ngFor="let result of results | async"
+                  routerLink="/view/{{result.objectID}}"
+        >{{result.name}}</ion-item>
+    </ion-list>
 
 </ion-content>
