--- a/algolia-ionic/src/app/shared/event-detail/event-detail.component.html
+++ b/algolia-ionic/src/app/shared/event-detail/event-detail.component.html
@@ -1,18 +1,32 @@
 <ion-list [formGroup]="eventForm">
-  <ion-item>
-    <ion-label position="stacked">Evenement
-      <ion-text *ngIf="!readonly" color="danger">*</ion-text>
-    </ion-label>
-    <ion-input [readonly]="readonly" formControlName="name" required type="text" (ionFocus)="onTouched()"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="stacked">Datum
-      <ion-text *ngIf="!readonly" color="danger">*</ion-text>
-    </ion-label>
-    <ion-input [readonly]="readonly" formControlName="date" required type="date" (ionFocus)="onTouched()"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="stacked">Omschrijving</ion-label>
-    <ion-textarea [readonly]="readonly" formControlName="description" auto-grow (ionFocus)="onTouched()"></ion-textarea>
-  </ion-item>
+    <ion-item>
+        <ion-label position="stacked">Evenement
+            <ion-text *ngIf="!readonly" color="danger">*</ion-text>
+        </ion-label>
+        <ion-input [readonly]="readonly" formControlName="name" required type="text"
+                   (ionFocus)="onTouched()"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="stacked">Datum
+            <ion-text *ngIf="!readonly" color="danger">*</ion-text>
+        </ion-label>
+        <ion-input [readonly]="readonly" formControlName="date" required type="date"
+                   (ionFocus)="onTouched()"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="stacked">Omschrijving</ion-label>
+        <ion-textarea [readonly]="readonly" formControlName="description" auto-grow
+                      (ionFocus)="onTouched()"></ion-textarea>
+    </ion-item>
+    <ng-container formGroupName="_geoloc">
+        <ion-item>
+            <ion-label position="stacked">Lat</ion-label>
+            <ion-input [readonly]="readonly" formControlName="lat" type="number" (ionFocus)="onTouched()"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="stacked">Long</ion-label>
+            <ion-input [readonly]="readonly" formControlName="lng" type="number" (ionFocus)="onTouched()"></ion-input>
+        </ion-item>
+    </ng-container>
+    <ion-button type="submit">Submit</ion-button>
 </ion-list>
